--added: _dockerfile _buildbackend.yml
-fixes and adjustments in needed files (frontend)
-updated pom for sonarcloud and testing